# elevate-estate

./: .gitignore  README.md  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: ci.yml
apps/api/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial.py
apps/api/app/: main.py
apps/api/app/api/: deps.py
apps/api/app/api/v1/: auth.py  listings.py  media.py  organizations.py  roles.py  router.py
apps/api/app/core/: config.py  database.py  security.py
apps/api/app/models/: __init__.py  auth.py  listings.py  media.py  organizations.py  roles.py  users.py
apps/api/app/schemas/: auth.py  listings.py  media.py  organizations.py
apps/api/app/services/: auth_service.py  listing_service.py
apps/api/tests/: conftest.py  test_auth.py
apps/web/: next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  vitest.config.ts
apps/web/src/: middleware.ts  proxy.ts
apps/web/src/app/: globals.css  layout.tsx
apps/web/src/app/(app)/: layout.tsx
apps/web/src/app/(app)/team/: page.tsx
apps/web/src/app/(auth)/: layout.tsx
apps/web/src/app/actions/: generate-description.ts
apps/web/src/components/auth/: forgot-password-form.tsx  login-form.tsx  reset-password-form.tsx  signup-form.tsx
apps/web/src/components/layout/: header.tsx  sidebar.tsx
apps/web/src/context/: auth-context.tsx
apps/web/src/lib/: api.ts  types.ts  utils.ts
apps/web/src/test/: utils.test.ts
infra/docker/: Dockerfile.api  Dockerfile.web  docker-compose.yml
tests/e2e/: auth.spec.ts
(+18 files in other folders)
