[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "elevate-estate-api"
version = "0.1.0"
description = "Elevate Estate CRM API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "gunicorn>=22.0.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "pydantic[email]>=2.7.0",
    "pydantic-settings>=2.2.1",
    "argon2-cffi>=23.1.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "boto3>=1.34.0",
    "procrastinate[sqlalchemy]>=2.5.0",
    "python-jose[cryptography]>=3.3.0",
    "pillow>=10.3.0",
    "tenacity>=8.3.0",
    "structlog>=24.1.0",
    "sentry-sdk[fastapi]>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.6",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
    "faker>=25.0.0",
    "ruff>=0.4.4",
    "mypy>=1.10.0",
    "types-boto3",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
